# rag-bench-analytics

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: CLAUDE.md
airflow/: Dockerfile
dashboard/: app-drafts-experiments.py  app-soon-to-deprecate.py  app.py  app_v2.py
dbt/: .user.yml  dbt_project.yml  profiles.example.yml
docs/: cr-corpus-profile-delivery.md  design-decisions.md
infra/: README.md  main.tf  outputs.tf  variables.tf
ingestion/: __init__.py  __main__.py  config.py  load_raw.py  refresh_pricing.py  seed_storage.py  storage.py
ingestion_sample/: 20260608T103244-closed_book-anthropic.jsonl  20260608T105929-graph_neighborhood-anthropic.jsonl  20260608T110036-vector-anthropic.manifest.json  20260608T123559-closed_book-anthropic.manifest.json  20260608T123906-graph_neighborhood_1hop-anthropic.manifest.json  20260608T124023-graph_neighborhood_2hop-anthropic.jsonl  20260608T124023-graph_neighborhood_2hop-anthropic.manifest.json  20260608T124417-graph_neighborhood_2hop-anthropic.jsonl  20260608T215424-closed_book-anthropic.jsonl  20260608T215424-closed_book-anthropic.manifest.json  20260608T215522-vector-anthropic.jsonl  20260609T133711-vector-anthropic.jsonl  20260609T134442-vector-anthropic.jsonl  20260609T134442-vector-anthropic.manifest.json  20260609T134623-graph_neighborhood_1hop-anthropic.jsonl  20260609T134623-graph_neighborhood_1hop-anthropic.manifest.json  20260609T134758-graph_neighborhood_2hop-anthropic.jsonl  20260609T134758-graph_neighborhood_2hop-anthropic.manifest.json  20260609T153917-closed_book-anthropic.jsonl  20260609T153917-closed_book-anthropic.manifest.json  20260609T154127-vector-anthropic.manifest.json  (+45 more)
(+200 files in other folders)
